<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/lavender"
    tools:context=".DetailActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_atas"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/title"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textbahan"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:text="@string/alat" />

            <TextView
                android:id="@+id/detailAlat"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/produkkaca1" />

            <TextView
                android:id="@+id/textlangkah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:text="@string/langkah" />

            <TextView
                android:id="@+id/detaipembuatan"
                android:layout_width="306dp"
                android:layout_height="169dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/langkahprodukkaca1" />
        </LinearLayout>

</ScrollView>